@@ -5,26 +5,28 @@ DIST libvirt-python-1.2.3.tar.gz 150440 SHA256 ac5edbb28a9ef55eeef960f0d190b0efa
 DIST libvirt-python-1.2.4.tar.gz 150662 SHA256 a2f30059b8870b3808b2bd2f19210422a348649a8f53523c2cbfa5cd64af217e SHA512 2ef354c69638ee136e87731aa2028365d6e39be79f21e8b49b6f4e387a26a3006f97d567c713a62e742d2077f57090e0e6f6ea6f99871c64921048f53cdd9422 WHIRLPOOL f2fc27f22b2bebe7577850d28f988ed8151b84aa1e1babc2f0e33fe655f3155e4e578aec2997849cec0988908770c9d5f994deb2a78b9eb921b748b829abc862
 DIST libvirt-python-1.2.5.tar.gz 152029 SHA256 f77c9f970274c3fa5159603433b05da1f93afb318ead1f277bcaf5392d221b64 SHA512 46063d6e5f9ad9281318be9c6731956a81d90e1ff768b3e01ec2b846c241528ceb7f98e58904e0f416d7b25b61608eb7f7b81a58d5fda94d981a9aa8089b6c20 WHIRLPOOL 2ec20e4a7fd4700bd5fed2f528a1dbd5ef85b3d57c7e5625ee74662c35480242484e43064465d194bcf1bad53754dd175b3b1e11eb3cb1bd7c80451f019b6d3e
 DIST libvirt-python-1.2.6.tar.gz 155173 SHA256 cdbd546d608b10a25ce9ef010da55297bb88728ec5a8367b1523bbf230cae6a2 SHA512 34c7a8f622f94a93e50ba4b8bb888e170cb75f54a346f986f94e1c74b5ab4d67301d41cf3d2da4772dff2e6f163402ffc1b4685bff96574478e8a325aaa42578 WHIRLPOOL 02cfa43e0f22afbd6750f46a21f164a645776b4a19841be0b0e25f3a67f2639c45e334004918c47b8b40a29c6cf49b05211917230c1f4fc83381f3c20be07899
+DIST libvirt-python-1.2.9.tar.gz 160357 SHA256 8f7023ae93aecc6981e07f88fd47bcec1b2bdef52c37c2db8acfb1ad379f79ed SHA512 be7741e8fbc66d32d9df84f493cde18185783a6d91395df1d82bd4e33cf1cbed657f681f3bccc1d87df77181896e173f84124af243318fc8a5b63f7172dde527 WHIRLPOOL d0043bd6df456d3fa79bb01a757c062db81b1c8ac9d7d840522617f645804123790235797a210fe2604bcd726f5175a8c1748160e0834e7f511fbc9077c45e1a
 EBUILD libvirt-python-1.2.3.ebuild 963 SHA256 2af6591c91fc16b215383d5f2249ca509b722937957c298078f84574e579cd36 SHA512 219aba70bbc11dbc3af2a99685ebda8bfd4bd42c0aa9793818a920ddfc855f43b82983ffbc37980773edefe0c307c75eeda1c6f882969c3cfb546fa9680bd63a WHIRLPOOL f1a4c5bbe385055e85fac5987fae2e3d3d9b19d80f4bc670182385baf79e41c1f6b5a3f32f32cec12dcd7ea5275338aad4a5ce5b90edd813437284ee5b0d484a
 EBUILD libvirt-python-1.2.4.ebuild 968 SHA256 f35b12a7f9cbbfbf3389de7f7fe1a4e220a9f23a0cc70a6cdcb69e98db15bfd5 SHA512 a73651967eb4f7dd6b3041f6a28bfefefb0c59d06c52a0700716e9634978a97ccaf7e163421d73b117ca17be3b16b2cdf79d7921020ae23e66d075e53e02f8c4 WHIRLPOOL fd36f123f67e9611cf104ea07c1100257993ab7e83f396eaefafb4a01ce6240b6fdfb142b81585ce64721fb9e8ce72d9763920b3c7e1e61880d05b0cdd2b7196
 EBUILD libvirt-python-1.2.5.ebuild 963 SHA256 c491ada0fccda9e2ad20603a3b8cceb27d0a1c9eebe4e0163c6e87c3698d5b09 SHA512 be3045447a5b02a484dfede25c175d97f9d67d9b2e50cd38fcac52377aa6bc152937a907b7b6b7d6ada02ea87e3e85268b6e9a0a3c2dc6ec53f65ecb229d629a WHIRLPOOL 1d5ec6a0a72705c7bd8d9dd7288782cf38025f788914e115917dfa21e6da7deef1566dce08f44e46f2a82293b705218089302ad28b882a7c0e400c3119604737
 EBUILD libvirt-python-1.2.6.ebuild 970 SHA256 94c120770ff7e65b3830423695b09a3af87f029d1889aa72ebd99edb2b46ba30 SHA512 af92f8837c17453960fe07b2c22f7cac7c11d92496d4f2b1279a5a9fd8dca2c8cb7795f53afd5b3c061302fbc26a4783fa0691713a49f7418b7b134ad67f41b8 WHIRLPOOL c5924aae3cdbb7ec4fd0db9b5c573e4a8dc6bb8e00ed3eb8b74dd3c0e42dd1bda632f0fb56da799a9bcb0c7f35cb74b36f496be9d39c0437a8af22d930825c9f
-MISC ChangeLog 2370 SHA256 aa0cf1c34c85a029f3473ebad330d9bffdc296b4e8fdc6eb6f682b3d827368df SHA512 e9e9e153259479b32addba4a6f4c9216252887833bc53264aeac70d50f8632714d0b0f6d9ec14113769e04eb6c8aaf3ce2e01d8e6fa87a867c96446df7b4d350 WHIRLPOOL 7bbc4ae101142908d6a121cf4bb60a69b387e72286274cea83fa445306e15158c54f3843fda5d2dba523008a1009f83784d2b5d6f110ff9bd5022e910479a2e4
+EBUILD libvirt-python-1.2.9.ebuild 968 SHA256 82eef0afb071a28c62f4fa04ae72ae82bc5b2dafab52252ee3db15f5016e562c SHA512 d0396a560e8579979b37b4213fd33ef5f8514b214a93ec30f2f350679195128ccad1b7d842b3b34db7268cc88a336364d6c002ef864b1168e8d342cda7e1e114 WHIRLPOOL 29336c67eadaca8ea904325bfc829b552cc15b48599eb061d6c782438a49a1f6afe81913de5d7af8a7c036ba9716b339ae80b25f469eebbdb0781635f6d8a57f
+MISC ChangeLog 2506 SHA256 1a3348137c56a85dae0c65080651ede0204a5237541745e883db2472bee9c182 SHA512 33563775b71bd8e430babd67b8cdea21e44840402474913f297240e132429dfd3c45bc1fce580cf84def59e49efd4772f49760b82ff4fd0166d2ec972082b565 WHIRLPOOL b2155f95068aedda7cd6863b8510051be47fa773862013ec72b90a95308eed8fd1bda1a6a8064d8e0f279959ee19c0a23d29c709146904b24941d254d56152f4
 MISC metadata.xml 168 SHA256 24c2e8ca0cef28dd400fc647c8f1dd2e33b4510d026c86f5fb5d4da1ca9b70f0 SHA512 74ad07706e4f4015cdd9c0f88eee2a5570d2eb279c199961dcb47437840bc0434b1a4c2eb81eb0de5ab0e68c1d2470315efca25410610ace0788e58dfaa638c9 WHIRLPOOL cdc6a231855ed5b0de893f57b6a6df463890190df4fa5f4dce271b76047b28d7ed3265ccb37bd5cc210944bad785e6262755f312a243048c55854a47141e767f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJT6npuAAoJELp701BxlEWfU78P/Alc0PsZBiaE85WlsUbn/eBs
-8jPHMK2NY/h70DcnDE9d+bjw0xnR5Xt9asy9nmbezMojVYzAogpGTSxhLh2GiLiK
-XB2KJ8iJHDBPsnG3Glr37nnX9SHFYz9qQXSGztdK8UT7FMpQzD++n/5Dn6QaSdFJ
-tT+2Fp0kNVHgJzyC7qm7oE4+kDupeDSE5JEgfa4g+agPiyCqSnd4YK7HFDOj8QaX
-oRWaUkGX+7U4CTJv4qL8gJC6WLL8FD0IcizKGUseIM6g1H7HBaVHV8YpbpdYYYYA
-TyA0oyquoL6bG8VcQajXGBPsi1W6cezXmPWx5qW9oco4/KCpkCvWS6hZT+eRpxG+
-1Vmtm0yORhAVCss3idFYffmrIZuoFyGTjBW/FYcQLcIvEKIbmX65YsfUob7RM9R+
-LmKWdHMT73B3cdipJgp2jnWTZGkINwACQeUWCU/LQuTnJTC4F7SQArc8QUq6gq3D
-Li+QrYXvtxQsFlJ1lNN/nrwR7L2omFS53sc83PYm6akcSh5KHX+1AS8Soks1NAuI
-m+ZsJsfbZGr3qWwWln2yHQzHkHhJsNYk552jsuF1AnfmUYkEryid0n5VQuBmsUgR
-xw/jDP/4F0EUiIBigjd6fsIxv31zFJR20mceSTTYGCTzx42sfmXvEskFy0LcZnXy
-pxNC0BzRHhambAc30tOp
-=3/a0
+iQIcBAEBCAAGBQJURqdpAAoJELhOzYlK7nn/6SsQAJivsfRSprmtxztJ7FmK3ReO
+g30DleFP0Q4aF+dBzdU+iSAKH27segNy41dmS79xOYA0RyyrkhVYNBTJwDmp/OF5
+0xPWQowzEFpICeZDENuHgRc3yHKmOH6A1fpf9CE+wGaGFqT2RtOquta5LRIS7eDs
+EH3mTQhs5Y20Xvr9Wrq4Y7t1sRFeUaFQWDN28SMFup1R+92CboMt1fOiFt8aKc30
+PKrU/lcBj+/TNkm1SRQQxRZrSW/xW9mIgCkUjIHb9qbalWmmQrZSd2xf/SAOLSqV
+wrWQMhoZ+3syA/mSa5a+DTXxP+tp+uM6gUDe8biiZQvEA6tn8HOicZGtVxHA+UTe
+Vwn8TI/fzEKaft/34JDdy51EJ1Yo6le8ZVjSDX4/fqwmmEdGaGTn9XL0KCwaicdw
+gNqP1i8O30jAuntmreskDwcpMMlLpNAauu1ZcMQZamElWXjxqRDVLGsBtI3ih/9/
+zJHJS92tQjdnlnswtZypBIYIklpNZLYqYxlKAcOw9HVzCc3F/u8lihj5iCGaCCkS
+kkiTJ4pbhvetUxt0QpGlfXMHUzEVRdirEHeJhXA0xjNVIPxbH9XOVFn2rq0iSZ0H
+SPjDatM5cDV97VmoUUiWKl08AmOoql1F013aFsgeEr6MPJc7j+oPRtKbR//PJpjZ
+psUOpKrJJLeoWt1IBBAg
+=DGOI
 -----END PGP SIGNATURE-----
